Company Org/src/objects/TeamWork_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>App_Key__c</fullName>
        <label>App Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Id__c</fullName>
        <label>Company_Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point__c</fullName>
        <label>End Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Email_ID__c</fullName>
        <label>HR Email ID</label>
        <type>Email</type>
    </fields>
    <label>TeamWork Configuration</label>
</CustomObject>